Spacing correction

--- a/style.css
+++ b/style.css
@@ -148,18 +148,14 @@ button {
 
 
 /*----- Reusable CSS Classes -----*/
-section{
-    padding: 6.5rem  2rem;
-}
-
 .section-title{
     font-size: var(--fz-sm);
     margin-bottom: 2em;
     padding: 0 2%;
 }
 
-.about, .projects, .contact{
-  margin-bottom: 10em;
+.projects, .contact{
+  padding: 7em 0;
 }
 
 /*----- Navbar -----*/
@@ -270,6 +266,9 @@ header {
 }
 
 /*----- About -----*/
+.about{
+  margin-bottom: 7em;
+}
 .about-content{
     display: grid;
     grid-template-columns: 3fr 2fr;
@@ -360,24 +359,25 @@ header {
     margin-top: 1em;
 }
 
-.project-image-container{
-    grid-area: 1 / 6 / -1 / -1;
-    position: relative;
-    z-index: 1;
-    padding: 1em;
+.project-image-container {
+    width: 100%; 
+    height: 20em; 
+    overflow: hidden; 
 }
 
-.image-link{
-    position: relative;
-    z-index: 1;
-    display: inline-block;
-    color: inherit;
-}
-
-.image-link img{
+.background-image {
     width: 100%;
-    object-fit: cover;
-    border-radius: 15%;
+    height: 100%;
+    background-size: cover; 
+    background-position: center; 
+    border-radius: 5%; 
+    max-width: 90%; 
+}
+
+.project-list{
+  display: flex; 
+  flex-wrap: wrap;
+  gap: 5em;
 }
 
 .project:nth-child(even) .project-content {
